feat(backend): implement REST APIs, security configuration, order workflow, and DTO mappings